<resources>
    <string name="app_name">LayoutBasics</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="reset">RESET</string>
    <string name="sign_in">Sign In</string>
    <string name="scheduled">SCHEDULED</string>
    <string name="flight_departing_in_5_days">FLIGHT DEPARTING IN 5 DAYS</string>
    <string name="pnr_ky9_432776">PNR: KY9/432776</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="age">AGE</string>
    <string name="flight_duration">FLIGHT DURATION</string>
    <string name="indra_gandhi_international_airport_delhi">Indra Gandhi International Airport, Delhi</string>
    <string name="monday_18th_march">Monday, 18th March</string>
    <string name="departure_time">DEPARTURE TIME</string>
    <string name="terminal">TERMINAL</string>
    <string name="gate">GATE</string>
    <string name="seat">SEAT</string>
    <string name="flight_no">FLIGHT NO</string>
    <string name="more">MORE...</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="random_text">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). Where does it come from?</string>
</resources>