<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/login"
        android:layout_weight="1"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/register"
        android:layout_weight="1"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/reset"
        android:layout_weight="1"
        android:layout_margin="3dp"/>
</LinearLayout>